--- a/repo-statistic-asyncio/Pipfile
+++ b/repo-statistic-asyncio/Pipfile
@@ -3,10 +3,14 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
+[dev-packages]
+pytest = "==6.2.5"
+
 [packages]
 requests = "==2.27.1"
 aiohttp = "==3.8.1"
 envparse = "==0.2.0"
+fire = "==0.4.0"
 
 [requires]
 python_version = "3.10"
