--- a/repo-statistic-asyncio/Pipfile
+++ b/repo-statistic-asyncio/Pipfile
@@ -11,6 +11,7 @@ requests = "==2.27.1"
 aiohttp = "==3.8.1"
 envparse = "==0.2.0"
 fire = "==0.4.0"
+pydantic = "==1.9.0"
 
 [requires]
 python_version = "3.10"
